// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stagger /> (native) should render its children as expected 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    flexWrap="wrap"
    style={
      [
        {
          "display": "flex",
          "flexWrap": "wrap",
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Item 1
      </Text>
    </View>
    <View
      style={
        [
          {},
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Item 2
      </Text>
    </View>
    <View
      style={
        [
          {},
          {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Item 3
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Stagger /> (native) should render with Move children (exercises the transform delay path) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    flexWrap="wrap"
    style={
      [
        {
          "display": "flex",
          "flexWrap": "wrap",
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Move 1
      </Text>
    </View>
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Move 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Stagger /> (native) should render with type="in" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    flexWrap="wrap"
    style={
      [
        {
          "display": "flex",
          "flexWrap": "wrap",
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        In 1
      </Text>
    </View>
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        In 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Stagger /> (native) should render with type="out" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    flexWrap="wrap"
    style={
      [
        {
          "display": "flex",
          "flexWrap": "wrap",
        },
      ]
    }
  >
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Out 1
      </Text>
    </View>
    <View
      style={
        [
          {},
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 16,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.normal"
        data-blade-component="text"
        fontFamily="text"
        fontSize={100}
        fontStyle="normal"
        fontWeight="regular"
        letterSpacing={50}
        lineHeight={100}
        style={
          [
            {
              "color": "hsla(0, 0%, 2%, 1)",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": -0.18200000000000002,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        Out 2
      </Text>
    </View>
  </View>
</View>
`;
